# tendril

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSING.md  NOTICE  README.md  SECURITY.md  cosign.pub  renovate.json  rust-toolchain.toml  versions.toml
.gitea/workflows/: ci.yml  deploy-dev.yml  dev-iso.yml  promote-stable.yml  release.yml
.github/workflows/: ci.yml
crates/capability-engine/: Cargo.toml
crates/capability-engine/src/: iommu.rs  lib.rs  matrix.rs  pci.rs  sysfs.rs  usb.rs  vgpu.rs
crates/capability-engine/tests/: detection.rs
crates/capability-engine/tests/fixtures/pci/0000:00:02.0/: device
crates/capability-engine/tests/fixtures/pci/0000:83:00.0/: device
crates/capability-engine/tests/fixtures/usb/devices/1-1/: product
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: domain.rs  guest.rs  kickstart.rs  lib.rs  lifecycle.rs  main.rs  provision.rs  role.rs  station.rs  unattend.rs  xml.rs
crates/provisioning/: Cargo.toml
crates/provisioning/src/: apply.rs  lib.rs  passthrough.rs  strategy.rs
crates/web/: Cargo.toml
crates/web/src/: apitokens.rs  auth.rs  backup.rs  cluster.rs  demo.rs  federation.rs  fedtls.rs  fleetupdate.rs  hardware.rs  images.rs  licensing.rs  main.rs  mdns.rs  network.rs  notify.rs  pages.rs  pxe.rs  seats.rs  stationmeta.rs  stations.rs  storage.rs  tls.rs  ui.rs  users.rs  vgpu.rs  vgpudrv.rs  vgpuguest.rs
docs/: CHANNELS.md  CLI.md  CLUSTERING.md  FEDERATION.md  HARDWARE-TESTING.md  INSTALL.md  PLAN.md  STEAM-GAMES.md  VERSIONING.md  VGPU.md
image/: Containerfile  vfio.conf
image/console/: getty-autologin.conf  tendril-console.sh  tendril-firstboot.service  tendril-firstboot.sh
image/greenboot/: 50-tendril-health.sh
image/installer/: config-unattended.toml  config.toml
image/kargs.d/: 00-tendril.toml
image/vgpu/: .gitignore  Containerfile.amd-gim  Containerfile.nvidia-vgpu-unlock  README.md
image/web/: tendril-web.service
out-unattended/: manifest-iso.json
scripts/: appliance-vgpu-build.sh  build-installer.sh  build-vgpu-variant.sh  demo-seed.sh  demo-setup.sh  deploy-demo.sh  deploy-dev.sh  fetch-steamos-media.sh  fetch-windows-media.sh  refresh-dl-sums.sh  setup-branch-protection.sh  tendril-pxe.sh  verify-media.sh
