[workspace]
resolver = "2"
members = [
    "crates/capability-engine",
    "crates/provisioning",
    "crates/orchestrator",
    "crates/web",
]

[workspace.package]
edition = "2021"
version = "0.24.0"
repository = "https://git.onetick.ninja/flan/tendril"
authors = ["Tendril contributors"]
license = "AGPL-3.0-only"

[workspace.dependencies]
tendril-capability-engine = { path = "crates/capability-engine" }
tendril-provisioning = { path = "crates/provisioning" }
tendril-orchestrator = { path = "crates/orchestrator" }
