[package]
name = "tendril-orchestrator"
description = "Per-node station provisioning and lifecycle over libvirt."
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tendril_orchestrator"
path = "src/lib.rs"

[dependencies]
tendril-capability-engine = { workspace = true }
tendril-provisioning = { workspace = true }
