[package]
name = "tendril-web"
description = "Tendril web control plane — Axum + HTMX over the provision service layer."
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tendril-web"
path = "src/main.rs"

[dependencies]
tendril-capability-engine = { workspace = true }
tendril-provisioning = { workspace = true }
tendril-orchestrator = { workspace = true }

axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
maud = { version = "0.26", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"  # compact single-line encoding for fleet join codes
mdns-sd = "0.11" # LAN discovery of fleet peers (_tendril._tcp) for easier fleet-building
include_dir = "0.7"
argon2 = "0.5"
# HTTPS for the web UI (and, later, federation mTLS): a rustls TLS server. Self-signed certs are
# generated with the `openssl` CLI (avoids the rcgen→time dependency tree; matches our shell-out style).
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
# WebSocket client for the cross-node VNC console proxy: this node opens an mTLS WebSocket to a peer's
# /api/station/:name/vnc (using fedtls::client_config) and relays it to the browser's noVNC socket.
# tokio-tungstenite 0.24 rides tokio-rustls 0.26 → rustls 0.23 (matches the server above).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
